force-app/main/default/objects/DIA_Message__c/DIA_Message__c.object-meta.xml
<CustomObject>
    <label>DIA Message</label>
    <nameField>
        <displayFormat>DIAMessage-{000000}</displayFormat>
        <label>DIA Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIA Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>