force-app/main/default/objects/DIA_Message__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DIA Case</label>
    <referenceTo>DIA_Case__c</referenceTo>
    <relationshipLabel>DIA Messages</relationshipLabel>
    <relationshipName>DIA_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>