force-app/main/default/objects/DIA_Message__c/fields/Customer_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Case_Number__c</fullName>
    <formula>Case__r.Customer_Case_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Case Number</label>
    <type>Text</type>
</CustomField>