force-app/main/default/objects/DIA_Message__c/fields/DIA_Lead__c.field-meta.xml
<CustomField>
    <fullName>DIA_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DIA Lead</label>
    <referenceTo>DIA_Lead__c</referenceTo>
    <relationshipLabel>DIA Messages</relationshipLabel>
    <relationshipName>DIA_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>