force-app/main/default/objects/DIA_Message__c/fields/UnRead__c.field-meta.xml
<CustomField>
    <fullName>UnRead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UnRead</label>
    <type>Checkbox</type>
</CustomField>