force-app/main/default/objects/DIA_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>From_User__c</columns>
    <columns>To_User__c</columns>
    <columns>Read__c</columns>
    <columns>UnRead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>